try to fix info drawer on mobile

--- a/themes/fancy/static/style.css
+++ b/themes/fancy/static/style.css
@@ -784,7 +784,12 @@ body.viewer-open {
     }
 
     .photo-viewer.drawer-open .viewer-main {
+        padding-right: 0;
         padding-bottom: calc(50vh + var(--gap-lg));
+    }
+
+    .photo-viewer.drawer-open .viewer-next {
+        right: var(--gap-md);
     }
 }
 
